test/tests/bad/undef-var.carth
;; UndefVar

(define undef-var this-var-is-undefined)
